Ugly, but starting to take shape
Form is not processed yet, no pdf file is returned, the html form is
ugly.

--- a/README
+++ b/README
@@ -5,6 +5,10 @@ Install dependencies in a virtual environment:
   source env/bin/activate
   pip install -r dependencies.txt
 
+Install also Latex dependencies:
+
+  sudo apt-get install texlive texlive-latex-extra
+
 Setup instructions:
 
   cp lions/settings_prod.sample.py lions/settings_prod.py
