Working pdf form generation and download

--- a/data/lions.tex
+++ b/data/lions.tex
@@ -35,7 +35,7 @@ LONDON LIONHEARTS VOLLEYBALL CLUB
                                                         & \\
                                                         &Gender: Male \if \gender male \Square\ \else \CheckedBox \fi\ Female  \if \gender male \CheckedBox  \else \Square\fi \\
                                                         & \\
-                                                        &Date of birth: \dob\\
+                                                        &Date of birth: \birthday\\
                                                         & \\
                                                         &Volleyball experience: \experience\ years\\
                                                         & \\
@@ -126,12 +126,12 @@ Account number: 00559418
 
 Reference: <Your SURNAME>
 
-Any questions, don’t hesitate to contact us by email info@londonlionhearts.co.uk
+Any questions, don't hesitate to contact us by email info@londonlionhearts.co.uk
 Or call us directly at:
 
 \begin{itemize}
-  \item Allan – 07960372220	club manager and head coach
-  \item Nico – 07837820975	club secretary
+  \item Allan - 07960372220	club manager and head coach
+  \item Nico - 07837820975	club secretary
 \end{itemize}
 \newpage
 
