--- a/README
+++ b/README
@@ -5,9 +5,9 @@ Install dependencies in a virtual environment:
   source env/bin/activate
   pip install -r dependencies.txt
 
-Install also Latex dependencies:
+Install also Latex and image processing dependencies:
 
-  sudo apt-get install texlive texlive-latex-extra
+  sudo apt-get install texlive texlive-latex-extra imagemagick
 
 Setup instructions:
 
