support for accents, build fix
characters with accents now supported
modified path of source file

--- a/data/lions.tex
+++ b/data/lions.tex
@@ -1,16 +1,14 @@
-\documentclass[a4paper,12pt]{article}
 \usepackage{graphicx}
 \usepackage{lmodern}
 \usepackage{multirow}
 \usepackage{wasysym}
 \usepackage[cm]{fullpage}
 \usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
 \setlength{\textheight}{800pt}
 \usepackage{ulem}
 \usepackage[british]{babel}
 
-\graphicspath{{./data/} {\gpath/}}
+\graphicspath{{\datapath/} {\gpath/}}
 
 \begin{document}
 \sffamily
