choice of teams

--- a/data/lions.tex
+++ b/data/lions.tex
@@ -34,7 +34,7 @@
 \begin{center}
 
 
-REGISTRATION 2012-2013
+REGISTRATION 2013-2014
 
 LONDON LIONHEARTS VOLLEYBALL CLUB
 
@@ -56,7 +56,7 @@ LONDON LIONHEARTS VOLLEYBALL CLUB
                                                         &Date of birth: \birthday\\
                                                         & \\
                                                         &Volleyball experience: \experience\ years\\
-                                                        & \\
+                                                        & team: \team \\
                                                         & \\
                                                         &Date:    \today \\
 \end{tabular}
@@ -87,7 +87,7 @@ Address:&\normalsize \addresslineone   & \sout{Junior till Season}:\\
 \cline{1-3}
 \multicolumn{1}{|l}{Season }& \multicolumn{1}{|l}{ Div} & \multicolumn{1}{|l|}{Team} &  No.&   Signature & Signature \\
 \hline
-\multicolumn{1}{|l|}{2012 / 13}   &\multicolumn{1}{|l}{M2} &\multicolumn{1}{|l|}{ Lionhearts Predators} & & & \\
+\multicolumn{1}{|l|}{2012 / 13}   &\multicolumn{1}{|l}{\league} &\multicolumn{1}{|l|}{ Lionhearts \team} & & & \\
 \hline
 
 \multicolumn{1}{|l|}{} & \multicolumn{1}{|l|}{} &\multicolumn{1}{|l|}{} & & & \\
@@ -102,7 +102,7 @@ Address:&\normalsize \addresslineone   & \sout{Junior till Season}:\\
 
 \normalsize
 \begin{center}
-REGISTRATION 2012-2013
+REGISTRATION 2013-2014
 
 LONDON LIONHEARTS VOLLEYBALL CLUB
 \vspace{0.5cm}
