--- a/data/lions.tex
+++ b/data/lions.tex
@@ -62,7 +62,7 @@ LONDON LIONHEARTS VOLLEYBALL CLUB
 \end{tabular}
 \vspace{0.7cm}
 
-{\bfseries Please. bring this document back to your team secretary as soon as possible so we can get you registered with the league quickly.}
+{\bfseries Please PRINT and bring this document back to your team secretary as soon as possible so we can get you registered with the league quickly.}
 \vspace{0.7cm}
 \hrule
 \Large
@@ -87,7 +87,7 @@ Address:&\normalsize \addresslineone   & \sout{Junior till Season}:\\
 \cline{1-3}
 \multicolumn{1}{|l}{Season }& \multicolumn{1}{|l}{ Div} & \multicolumn{1}{|l|}{Team} &  No.&   Signature & Signature \\
 \hline
-\multicolumn{1}{|l|}{2012 / 13}   &\multicolumn{1}{|l}{\league} &\multicolumn{1}{|l|}{ Lionhearts \team} & & & \\
+\multicolumn{1}{|l|}{2013 / 14}   &\multicolumn{1}{|l}{\league} &\multicolumn{1}{|l|}{ Lionhearts \team} & & & \\
 \hline
 
 \multicolumn{1}{|l|}{} & \multicolumn{1}{|l|}{} &\multicolumn{1}{|l|}{} & & & \\
@@ -123,16 +123,16 @@ PAYMENTS:
 \item ADULTS:
 2 x installments:
 \begin{itemize}
-  \item of \textsterling 120 if paid by 1st October 2012 and 1st February 2013 (save \textsterling 50)
-  \item of \textsterling 145 if paid later
+\item of \textsterling 165 if paid by 1st October 2013 and 1st February 2014 (save \textsterling 70)
+  \item of \textsterling 200 if paid later
 \end{itemize}
 
 \item STUDENTS (photocopy of student card required):
 
 2 x installments:
 \begin{itemize}
-  \item \textsterling 85 if paid by 1st October 2012 and 1st February 2013 (save \textsterling 30)
-  \item \textsterling 100 if paid later
+  \item \textsterling 125 if paid by 1st October 2012 and 1st February 2013 (save \textsterling 50)
+  \item \textsterling 150 if paid later
 \end{itemize}
 \end{itemize}
 
@@ -148,8 +148,7 @@ Any questions, don't hesitate to contact us by email info@londonlionhearts.co.uk
 Or call us directly at:
 
 \begin{itemize}
-  \item Allan - 07960372220	club manager and head coach
-  \item Nico - 07837820975	club secretary
+  \item Nico - 07 837 820 975	club secretary
 \end{itemize}
 \newpage
 
